- NEW: Social Icons — Add more social icons: WordPress, Messenger, Skype, Slack, Telegram, WhatsApp, GitLab, Bitbucket.
- NEW: Sidebar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- NEW: Footer Widgets Bar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- TWEAK: Header Elements — SVG Logo now will be displayed using `<img>` tag instead of the inline SVG method. This will prevent display issue when both desktop and mobile SVG logo contain elements with same ID (e.g. gradient fill effect).
- TWEAK: Header Elements — Improve header's Shopping Cart template (**If you overrode this template via Child Theme, please review the template again**).
- TWEAK: Header Elements — Allow "Shopping Cart Dropdown" inside the mobile header bar.
- TWEAK: Header Builder — Improve header menu javascript to support full width Mega Menu (available since Suki Pro v1.2).
- TWEAK: Social Icons — Update some existing social icons.
- TWEAK: Social Icons — Add hidden label on each social icon for better accessibility.
- TWEAK: Social Icons — Remove Google+.
- TWEAK: Google Fonts — Update Google Fonts list.
- TWEAK: WooCommerce compatibility — Improve mini cart widget's buttons CSS (make each button full width for better compatibility with longer text in non-english languages).
- TWEAK: Elementor compatibility — Move compatibility CSS to standalone inline CSS. 
- TWEAK: Customizer — Improve Customizer UI & UX.
- TWEAK: Theme Dashboard — Improve theme dashboard layout for better compatibility with Suki Pro's White Label module. Now user won't see "pro" badges and links to our website on the modules manager.
- FIX: Header — Shopping cart dropdown toggle does nothing on Cart and Checkout pages. Now it works like a link to the Cart page.
- FIX: WooCommerce — "My Account" page's navigation links color doesn't follow the global link color configured in Customizer.