@@ -201,6 +201,7 @@ class Suki_Customizer {
 		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--widgets-bar.php' );
 		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--bottom-bar.php' );
 		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--copyright.php' );
+		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--html.php' );
 		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--social.php' );
 		require_once( SUKI_INCLUDES_DIR . '/customizer/options/footer--scroll-to-top.php' );
 
