@@ -1,4 +1,7 @@
 <wpml-config> 
+	<custom-fields>
+ 		<custom-field action="copy">_suki_page_settings</custom-field>
+ 	</custom-fields>	
 	<admin-texts>
 		<key name="theme_mods_suki">
 			<key name="header_html_1_content" />
